[tool.poetry]
name = "tele"
version = "1.0.0"
description = ""
authors = ["loki <gunlinux@ya.ru>"]
readme = "README.md"
packages = [{include = "tele"}]

[tool.poetry.dependencies]
python = ">=3.11.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
flake8 = "5.0.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

